fix scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -216,6 +216,7 @@ button[class=cta]{
 @media only screen and (min-width: 1000px){
     body{
         font-size: 18px;
+        overflow-y: hidden;
     }
 
     .landing{
